some pretty cool stuff

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>QuoteQuiz</h1>
 
-    <button id="startButton" onclick="start()">Start Game</button>
+    <button id="startButton" onclick="start()">Start Game</button><br />
+    <span id="infoDisplay" class="info"></span> <br />
     <span id="quoteDisplay" class="currentQuote"></span>
 
     <script src="code/quotes.js"></script>
