--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </div>
     <span id="bottomInfo" class="info"></span> <br />
 
+    <h2>Player</h2>
+    <span id="playerInfo" class="info"></span> <br />
+    <button id="nameButton" onclick="changePlayerName()">Change Name</button><br />
 
     <script src="code/quotes.js"></script>
     <script src="code/main.js"></script>
