--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Quote Quiz</title>
+    <title>QuoteQuiz</title>
     <meta charset="utf-8" />
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
@@ -22,7 +22,7 @@
     <button id="nameButton" onclick="changePlayerName()">Change Name</button><br />
     <button id="exportButton" onclick="exportSave()">Export Save</button>
     <button id="importButton" onclick="importSave()">Import Save</button>
-    <button id="resetButton" onclick="resetSave()">Delete Save</button><br />
+    <button id="resetButton" onclick="resetSave()">Delete Save</button>
     <button id="nsfwButton" onclick="toggleNSFW()">NSFW</button><br />
 
     <h2>How to Play</h2>
@@ -34,10 +34,17 @@
 
     <h2>Credits</h2>
     Game made by Schrottii (started on 2023-12-02)<br />
-    Version 1.0 (released on 2023-12-04)<br />
     Quotes collected by Schrottii and shgabb<br />
     Inspired by shgabb and Playwo<br /><br />
     <a href="https://schrottii.github.io/">Click here to see my other games!</a>
+
+    <h3>Patch notes</h3>
+    Version 1.1 (2023-12-09):<br />
+    - Changed host <br />
+    - Added support for rescue codes <br />
+    - Added 25 new quotes! (75 total) <br />
+    - Added recalculation of trophies, to prevent having more than 10 from a single quote <br />
+    - Added a short patch notes section
 
     <script src="code/quotes.js"></script>
     <script src="code/main.js"></script>
