--- a/index.html
+++ b/index.html
@@ -60,5 +60,6 @@
     <script src="scenes/mainmenu.js"></script>
     <script src="scenes/settings.js"></script>
     <script src="scenes/play.js"></script>
+    <script src="scenes/patchnotes.js"></script>
 </body>
 </html>
