--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="code/scenes/mainmenu.js"></script>
     <script src="code/scenes/settings.js"></script>
     <script src="code/scenes/play.js"></script>
+    <script src="code/scenes/modeselection.js"></script>
     <script src="code/scenes/patchnotes.js"></script>
 </body>
 </html>
