--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta charset="utf-8" />
     <meta name="viewport"
           content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <audio id="wggjAudio" type="audio/ogg" preload="auto"></audio>
     <canvas id="wggjCanvas"></canvas>
 
     <script src="code/wggj.js"></script>
-    <script src="code/quotes.js"></script>
+
+    <script src="code/gamemodes.js"></script>
+    <script src="code/questions.js"></script>
     <script src="code/quiz.js"></script>
     <script src="code/main.js"></script>
 
@@ -21,5 +23,6 @@
     <script src="code/scenes/play.js"></script>
     <script src="code/scenes/modeselection.js"></script>
     <script src="code/scenes/patchnotes.js"></script>
+    <script src="code/scenes/collection.js"></script>
 </body>
 </html>
